<resources>
    <string name="app_name">Feedback Application Form</string>
    <string name="text">Your Feedback matters!!</string>
    <string name="first_name">Enter Your Firstname</string>
    <string name="last_name">Enter Your Lastname</string>
    <string name="birth_day">Enter Your Birthday</string>
    <string name="postal_address">Enter Your Address</string>
    <string name="email_address">Enter Your Email</string>
    <string name="phone_number">Enter Your Phone Number</string>




    <string name="first_nameText">Firstname</string>
    <string name="last_nameText">Lastname</string>
    <string name="birth_dayText">Birthday</string>
    <string name="postal_addressText">Address</string>
    <string name="email_addressText">Email</string>
    <string name="phone_numberText">Number</string>



    <string name="random_button">RANDOM</string>
    <string name="send_button">SUBMIT</string>
    <string name="reset_button">RESET</string>


</resources>